# SimTradeData

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.spec-workflow/specs/full-sync/: tasks.md
docs/: Architecture_Guide.md  BaoStock_Complete_Download_Plan.md  CLI_USAGE_GUIDE.md  DEVELOPER_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PTRADE_PARQUET_FORMAT.md
docs/archive/reports/: TEST_COVERAGE_REPORT.md
scripts/: download.py  download_efficient.py  download_fundamentals_hdf5.py  download_mootdx.py  download_tdx_day.py  download_unified_hdf5.py  export_parquet.py  import_tdx_day.py  import_tdx_finance.py
simtradedata/: __init__.py  __main__.py
simtradedata/config/: field_mappings.py  mootdx_finvalue_map.py
simtradedata/converters/: data_converter.py
simtradedata/data_sources/: akshare_adapter.py  baostock_adapter.py  manager.py
simtradedata/database/: schema.py
simtradedata/fetchers/: __init__.py  baostock_fetcher.py  mootdx_affair_fetcher.py  mootdx_fetcher.py  mootdx_unified_fetcher.py  unified_fetcher.py
simtradedata/interfaces/: ptrade_data_api.py
simtradedata/processors/: data_splitter.py
simtradedata/sync/: manager.py
simtradedata/utils/: code_utils.py  download_progress.py  paths.py  sampling.py
simtradedata/validators/: data_validator.py
simtradedata/writers/: __init__.py  duckdb_writer.py  h5_writer.py
tests/: test_database_setup.py  test_integration_simple.py  test_sync_system.py
tests/sync/: test_full_sync_benchmark.py  test_sync_manager.py  test_sync_system.py  test_sync_system_real.py
