[project]
name = "simtradedata"
version = "0.1.0"
description = "为 simtradelab 项目提供数据支持的配套工具库"
authors = [
    {name = "kayou",email = "kayou@duck.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "baostock>=0.8.9,<0.9.0",
    "tqdm>=4.67.1,<5.0.0",
    "duckdb>=1.2.0,<2.0.0",
    "pyarrow>=19.0.0,<20.0.0",
]

# CLI entry points (run scripts directly with poetry run python scripts/xxx.py)


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pandas = "^2.3.1"
flask = "^3.1.1"
flask-cors = "^6.0.1"
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
pre-commit = "^4.2.0"
psutil = "^7.0.0"
pytest-cov = "^7.0.0"
pytest-benchmark = "^5.1.0"
pydantic = "^2.12.4"
cachetools = "^6.2.1"
joblib = "^1.5.2"
baostock = "^0.8.9"
jupyter = "^1.1.1"
numpy = "<2"
